--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -26,7 +26,172 @@
         </div>
 
         <div class="row">
-            <div class="col-12 col-lg-7"></div>
+            <div class="col-12 col-lg-7">
+                <div class="order-confirmation-wrapper p-2 border">
+                    <div class="row"> 
+                        <div class="col">
+                            <div class="text-muted"> 
+                               <small> Order Info: </small>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row"> 
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-black font-weight-bold"> Order Number</p>
+                        </div>
+                        <div class="col-12 col-md-4 text-md-right">
+                            <p class="mb-0"> {{ order.order_number }}</p>
+                        </div>
+                    </div>
+
+                    <div class="row"> 
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-black font-weight-bold"> Order Date</p>
+                        </div>
+                        <div class="col-12 col-md-4 text-md-right">
+                            <p class="mb-0"> {{ order.date }}</p>
+                        </div>
+                    </div>
+
+                    <div class="row"> 
+                        <div class="col">
+                            <div class="text-muted"> 
+                               <small> Order Details: </small>
+                            </div>
+                        </div>
+                    </div>
+
+                    {% for item in order.lineitems.all %}
+                    <div class="row"> 
+                        <div class="col-12 col-md-4">
+                            <p class=" small mb-0 text-black font-weight-bold"> 
+                                {{ item.product.name }}{% if item.product_size %} - Size {{ item.product.size|upper }}{% endif %}
+                            </p>
+                        </div>
+                        <div class="col-12 col-md-4 text-md-right">
+                            <p class=" small mb-0"> {{ item.quantity }} @ ${{ item.product.price }} each</p>
+                        </div>
+                    </div>
+                    {% endfor %}
+
+                    <div class="row"> 
+                        <div class="col">
+                            <div class="text-muted"> 
+                               <small> Delivering To: </small>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row"> 
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-black font-weight-bold"> Full Name</p>
+                        </div>
+                        <div class="col-12 col-md-4 text-md-right">
+                            <p class="mb-0"> {{ order.full_name }}</p>
+                        </div>
+                    </div>
+
+                    <div class="row"> 
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-black font-weight-bold"> Address 1</p>
+                        </div>
+                        <div class="col-12 col-md-4 text-md-right">
+                            <p class="mb-0"> {{ order.street_address1 }}</p>
+                        </div>
+                    </div>
+
+                    <div class="row"> 
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-black font-weight-bold"> Address 2</p>
+                        </div>
+                        <div class="col-12 col-md-4 text-md-right">
+                            <p class="mb-0"> {{ order.street_address2 }}</p>
+                        </div>
+                    </div>
+
+                    <div class="row"> 
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-black font-weight-bold"> County</p>
+                        </div>
+                        <div class="col-12 col-md-4 text-md-right">
+                            <p class="mb-0"> {{ order.county }}</p>
+                        </div>
+                    </div>
+
+                    <div class="row"> 
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-black font-weight-bold"> Town or City</p>
+                        </div>
+                        <div class="col-12 col-md-4 text-md-right">
+                            <p class="mb-0"> {{ order.town_or_city }}</p>
+                        </div>
+                    </div>
+
+                    <div class="row"> 
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-black font-weight-bold"> Postal Code</p>
+                        </div>
+                        <div class="col-12 col-md-4 text-md-right">
+                            <p class="mb-0"> {{ order.postcode }}</p>
+                        </div>
+                    </div>
+
+                    <div class="row"> 
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-black font-weight-bold"> Country</p>
+                        </div>
+                        <div class="col-12 col-md-4 text-md-right">
+                            <p class="mb-0"> {{ order.country }}</p>
+                        </div>
+                    </div>
+
+                    <div class="row"> 
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-black font-weight-bold"> Phone Number</p>
+                        </div>
+                        <div class="col-12 col-md-4 text-md-right">
+                            <p class="mb-0"> {{ order.phone_number }}</p>
+                        </div>
+                    </div>
+
+                    <div class="row"> 
+                        <div class="col">
+                            <div class="text-muted"> 
+                               <small> Billing Info: </small>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row"> 
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-black font-weight-bold"> Order Number:</p>
+                        </div>
+                        <div class="col-12 col-md-4 text-md-right">
+                            <p class="mb-0"> {{ order.order_number }}</p>
+                        </div>
+                    </div>
+
+                    <div class="row"> 
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-black font-weight-bold"> Order Number:</p>
+                        </div>
+                        <div class="col-12 col-md-4 text-md-right">
+                            <p class="mb-0"> {{ order.order_number }}</p>
+                        </div>
+                    </div>
+
+                    <div class="row"> 
+                        <div class="col-12 col-md-4">
+                            <p class="mb-0 text-black font-weight-bold"> Order Number:</p>
+                        </div>
+                        <div class="col-12 col-md-4 text-md-right">
+                            <p class="mb-0"> {{ order.order_number }}</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
         </div>
         <div class="row">
 			<div class="col-12 col-lg-7 text-right">
