--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -165,28 +165,28 @@
 
                     <div class="row"> 
                         <div class="col-12 col-md-4">
-                            <p class="mb-0 text-black font-weight-bold"> Order Number:</p>
+                            <p class="mb-0 text-black font-weight-bold"> Order Total</p>
                         </div>
                         <div class="col-12 col-md-4 text-md-right">
-                            <p class="mb-0"> {{ order.order_number }}</p>
+                            <p class="mb-0"> {{ order.order_total }}</p>
                         </div>
                     </div>
 
                     <div class="row"> 
                         <div class="col-12 col-md-4">
-                            <p class="mb-0 text-black font-weight-bold"> Order Number:</p>
+                            <p class="mb-0 text-black font-weight-bold"> Delivery</p>
                         </div>
                         <div class="col-12 col-md-4 text-md-right">
-                            <p class="mb-0"> {{ order.order_number }}</p>
+                            <p class="mb-0"> {{ order.delivery_cost }}</p>
                         </div>
                     </div>
 
                     <div class="row"> 
                         <div class="col-12 col-md-4">
-                            <p class="mb-0 text-black font-weight-bold"> Order Number:</p>
+                            <p class="mb-0 text-black font-weight-bold"> Grand Total</p>
                         </div>
                         <div class="col-12 col-md-4 text-md-right">
-                            <p class="mb-0"> {{ order.order_number }}</p>
+                            <p class="mb-0"> {{ order.grand_total }}</p>
                         </div>
                     </div>
 
